--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+    networks:
+      - cs2-middleware_mmf_network
     environment:
       - REDIS_PASSWORD=redis
     restart: always
@@ -20,7 +22,7 @@ services:
     depends_on:
       - redis
     networks:
-      - docker_mmf_network
+      - cs2-middleware_mmf_network
     command: go run ./cmd/main.go
     develop:
       watch:
@@ -29,5 +31,5 @@ services:
           target: /app
 
 networks:
-  docker_mmf_network:
+  cs2-middleware_mmf_network:
     external: true
